Working version of radio button check

--- a/NeeleshRiddle.html
+++ b/NeeleshRiddle.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<p>Click the button to display an alert box.</p>
+<p>Simple riddle</p>
 <form action="" method="POST">
     <div class="question">
         <p><strong>Q1</strong>: 2+ 1 is what?</p>
@@ -19,9 +19,6 @@
 </form>
 </body>
 
-
-
-<button onclick="myFunction()">Try it</button>
 
 <script>
     function myFunction() {
