Only html file as Noah's pull request added the necessary config files

--- a/NeeleshRiddle.html
+++ b/NeeleshRiddle.html
@@ -23,7 +23,9 @@
 <script>
     function myFunction() {
         if(document.getElementById('c').checked) {
-            alert("Correct Answer!");
+            window.location.href="YouWin.html"
+        } else {
+            window.location.href="YouLose.html"
         }
     }
 </script>
