--- a/YouLose.html
+++ b/YouLose.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 <h1>You lose!</h1>
+<img src="HoldThisL.jpg" alt="Paper with an L" style="width: 200px; height: 200px">
 <p>You guessed incorrectly, better luck next time...</p>
 <a href="Start.html">Click here to start again</a>
 </body>
