--- a/Riddle1.html
+++ b/Riddle1.html
@@ -7,11 +7,12 @@
     <meta charset="UTF-8">
 
     <title>Riddle 1</title>
+    <link rel="stylesheet" href="submit.css">
 </head>
 
 <body>
 
-<form action="" method="POST">
+<form id="action" method="POST">
 
     <div class="question">
 
@@ -22,21 +23,27 @@
         <label><input type="radio" name="answer" id="c"> Ice</label>
 
     </div>
+<p>
+    <input class="submit" type="submit" onclick="myFunction()">
+</p>
 
-    <input type="submit" onclick="myFunction()">
 
 </form>
 
 <script>
 
-    function myFunction() {
+    var form = document.getElementById('action');
+
+    function myFunction(){
+
         if(document.getElementById('b').checked) {
 
-            alert("Correct Answer!");
+            form.action = 'Riddle2.html';
 
-        } else{
+        } else {
 
-            alert("Incorrect Answer!");
+            form.action ="YouLose.html"
+
         }
 
     }
