Riddle pages now go somewhere

--- a/NeeleshRiddle.html
+++ b/NeeleshRiddle.html
@@ -3,7 +3,7 @@
 <body>
 
 <p>Simple riddle</p>
-<form action="" method="POST">
+<form id="action">
     <div class="question">
         <p><strong>Q1</strong>: 2+ 1 is what?</p>
         <label>
@@ -21,11 +21,12 @@
 
 
 <script>
-    function myFunction() {
+    var form = document.getElementById('action');
+    function myFunction(){
         if(document.getElementById('c').checked) {
-            window.location.href="YouWin.html"
+            form.action = 'YouWin.html';
         } else {
-            window.location.href="YouLose.html"
+            form.action ="YouLose.html"
         }
     }
 </script>
