--- a/Riddle2.html
+++ b/Riddle2.html
@@ -7,6 +7,11 @@
     <meta charset="UTF-8">
 
     <title>Riddle 1</title>
+    <style>
+        body {
+            background-color: lightblue;
+        }
+    </style>
 </head>
 
 <body>
